--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Simple Chat</title>
-
+    <title>Big 2!</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/emojione/2.2.6/assets/css/emojione.min.css"/>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script> -->
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/cardLibrary/cards.css">
 
 </head>
 
@@ -16,52 +17,33 @@
   <header>
       <nav>
           <div class="nav-wrapper">
-              <a href="/" class="brand-logo right">Simple Chat</a>
+              <a href="/" class="brand-logo right">Big 2!</a>
           </div>
       </nav>
   </header>
   <main id="app">
-      <div class="row">
-          <div class="col s12">
-              <div class="card horizontal">
-                  <div id="chat-messages" class="card-content" v-html="chatContent">
-                  </div>
-              </div>
-          </div>
-      </div>
-      <div class="row" v-if="joined">
-          <div class="input-field col s8">
-              <input type="text" v-model="newMsg" @keyup.enter="send">
-          </div>
-          <div class="input-field col s4">
-              <button class="waves-effect waves-light btn" @click="send">
-                  <i class="material-icons right">chat</i>
-                  Send
-              </button>
-          </div>
-      </div>
-      <div class="row" v-if="!joined">
-          <div class="input-field col s8">
-              <input type="email" v-model.trim="email" placeholder="Email">
-          </div>
-          <div class="input-field col s8">
-              <input type="text" v-model.trim="username" placeholder="Username">
-          </div>
-          <div class="input-field col s4">
-              <button class="waves-effect waves-light btn" @click="join()">
-                  <i class="material-icons right">done</i>
-                  Join
-              </button>
-          </div>
-      </div>
+    <div style="display: flex; flex-direction: row" v-if="joined">
+      <group-chat v-bind:user="user"></group-chat>
+      <game v-bind:user="user"></game>
+    </div>
+    <user-login v-if="!joined" v-on:update-user="updateUser"></user-login>
   </main>
   <footer class="page-footer"></footer>
 
   <script src="https://unpkg.com/vue@2.1.3/dist/vue.min.js"></script>
   <script src="https://cdn.jsdelivr.net/emojione/2.2.6/lib/js/emojione.min.js"></script>
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <!-- <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script> -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script> -->
+  <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+ 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/md5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.core.js"></script>
+  <script src="/playingCard.js"></script>
+  <script src="/game.js"></script>
+  <script src="/chat.js"></script>
+  <script src="/login.js"></script>
   <script src="/app.js"></script>
 </body>
 </html>
