Showing available players.

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/md5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.core.js"></script>
+  <script src="/playerStatuses.js"></script>
   <script src="/gameCanvas.js"></script>
   <script src="/playingCard.js"></script>
   <script src="/game.js"></script>
