--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 <body>
   <header>
       <nav>
-          <div class="nav-wrapper">
+          <div class="nav-wrapper website-background-color">
               <a href="/" class="brand-logo right">Big 2!</a>
           </div>
       </nav>
@@ -28,7 +28,7 @@
     </div>
     <user-login v-if="!joined" v-on:update-user="updateUser"></user-login>
   </main>
-  <footer class="page-footer"></footer>
+  <footer class="page-footer website-background-color"></footer>
 
   <script src="https://unpkg.com/vue@2.1.3/dist/vue.min.js"></script>
   <script src="https://cdn.jsdelivr.net/emojione/2.2.6/lib/js/emojione.min.js"></script>
