--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/cardLibrary/cards.css">
 
+    <meta content="width=device-width,initial-scale=1,minimal-ui" name="viewport">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Material+Icons">
+    <link rel="stylesheet" href="https://unpkg.com/vue-material/dist/vue-material.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/vue-material/dist/theme/default.css">
+
 </head>
 
 
@@ -21,14 +26,17 @@
           </div>
       </nav>
   </header>
-  <main id="app">
-    <div style="display: flex; flex-direction: row" v-if="joined">
+  <main id="app" v-bind:class="{'black-background': joined }">
+    <div style="display: flex; flex-direction: row;" v-if="joined" >
       <group-chat v-bind:user="user"></group-chat>
       <game v-bind:user="user"></game>
     </div>
     <user-login v-if="!joined" v-on:update-user="updateUser"></user-login>
   </main>
-  <footer class="page-footer website-background-color"></footer>
+  <footer style="height: 30px; max-height:30px;" class="website-background-color"></footer>
+
+  <script src="https://unpkg.com/vue"></script>
+  <script src="https://unpkg.com/vue-material"></script>
 
   <script src="https://unpkg.com/vue@2.1.3/dist/vue.min.js"></script>
   <script src="https://cdn.jsdelivr.net/emojione/2.2.6/lib/js/emojione.min.js"></script>
